--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "dotenv>=0.9.9",
     "httpx>=0.28.1",
     "openai>=2.3.0",
+    "psycopg2-binary>=2.9.11",
     "pytest-playwright>=0.7.1",
     "selectolax>=0.4.0",
 ]
