--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,12 @@ requires-python = ">=3.13"
 dependencies = [
     "beautifulsoup4>=4.14.2",
     "dotenv>=0.9.9",
+    "google-auth>=2.43.0",
+    "google-auth-oauthlib>=1.2.2",
     "httpx>=0.28.1",
     "openai>=2.3.0",
+    "openpyxl>=3.1.5",
+    "pandas>=2.3.3",
     "psycopg2-binary>=2.9.11",
     "pytest-playwright>=0.7.1",
 ]
