--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,5 @@ dependencies = [
     "pandas>=2.3.3",
     "psycopg2-binary>=2.9.11",
     "pytest-playwright>=0.7.1",
+    "tiktoken>=0.12.0",
 ]
